docs: update StreamToolCallMiddleware
Signed-off-by: Tomáš Dvořák <toomas2d@gmail.com>

--- a/docs/modules/middleware.mdx
+++ b/docs/modules/middleware.mdx
@@ -598,16 +598,17 @@ await agent.run("What's the current weather in Miami?")
 
 See which parameters can be passed to the constructor.
 
-| Parameter        | Description                                                                 |
-|------------------|------------------------------------------------------------------------------|
-| `target`         | Specify a file or stream to which to write the trajectory.                         |
-| `included`       | List of classes to include in the trajectory.                                |
-| `excluded`       | List of classes to exclude from the trajectory.                              |
-| `pretty`         | Use pretty formatting for the trajectory.                                    |
-| `prefix_by_type` | Customize how instances of individual classes should be printed.             |
-| `exclude_none`   | Exclude `None` values from the printing.                                     |
-| `enabled`        | Enable/Disable the logging.                                                  |
-| `match_nested`   | Whether to observe trajectories of nested run contexts.                      |
+| Parameter          | Description                                                                                              |
+|--------------------|----------------------------------------------------------------------------------------------------------|
+| `target`           | Specify a file or stream to which to write the trajectory (pass `False` to disable).                     |
+| `included`         | List of classes to include in the trajectory.                                                            |
+| `excluded`         | List of classes to exclude from the trajectory.                                                          |
+| `pretty`           | Use pretty formatting for the trajectory.                                                                |
+| `prefix_by_type`   | Customize how instances of individual classes should be printed.                                         |
+| `exclude_none`     | Exclude `None` values from the printing.                                                                 |
+| `enabled`          | Enable/Disable the logging.                                                                              |
+| `match_nested`     | Whether to observe trajectories of nested run contexts.                                                  |
+| `emitter_priority` | Setting higher priority may result in capturing events without any modifications from other middlewares. |
 
 **Example**
 
@@ -624,10 +625,14 @@ GlobalTrajectoryMiddleware(target=[ChatModel]) # log only tool calls except Open
 GlobalTrajectoryMiddleware(prefix_by_type={BaseAgent: "🐝 "}) # use Bee Emoji for agents
 ```
 
+<Tip>You can listen to events emitted throughout the execution and build your custom trajectory.</Tip>
+
 
 ### Tool Call Streaming
 
-Middleware for handling streaming tool calls in a ChatModel. This middleware observes and listens to Chat Model stream updates and parses the tool calls on demand so that they can be consumed as soon as possible.
+Middleware for handling streaming tool calls in a ChatModel. This middleware observes and listens to [Chat Model](/modules/backend#chat-model) stream updates and parses the tool calls on demand so that they can be consumed as soon as possible.
+
+The middleware works even **without streaming** enabled. It just emits the `update` event at the very end.
 
 **Example**
 
@@ -650,12 +655,6 @@ async def main() -> None:
         match_nested=False,  # we are applying the middleware to the model directly
         force_streaming=True,  # we want to let middleware enable streaming on the model
     )
-
-    # With Streaming
-    # "{\n  \"New York\",\n  \"country\": \"United States\",\n  \"start_date\": null,\n  \"end_date\": null,\n  \"temperature_unit\": \"celsius\"\n}"
-
-    # No-streaming
-    # "{\n  \"location_name\": \"New York\",\n  \"country\": \"United States\",\n  \"start_date\": null,\n  \"end_date\": null,\n  \"temperature_unit\": \"celsius\"\n}"
 
     @middleware.emitter.on("update")
     def log_thoughts(event: StreamToolCallMiddlewareUpdateEvent, meta: EventMeta) -> None:
@@ -775,7 +774,7 @@ The following events can be observed when calling `Workflow.run(...)`.
 
 ### LinePrefixParser
 
-The following events are caught internally by the line prefix parser.
+The following events are caught internally by the `LinePrefixParser`.
 
 | Event            | Data Type                | Description                             |
 | :--------------- | :----------------------- | :-------------------------------------- |
